# Local-ollama-bot

./: DB.py  chat.py  constants.py  employee_management.db  globals.py  main.py  pyproject.toml  requirements.txt
AI/: dynamic_ui.py  essay.txt
AI/SolidWorksParameterExtractor/: README.md  main.py  requirements.txt
AI/SolidWorksParameterExtractor/sw_api/: solidworks_connector.py
AI/SolidWorksParameterExtractor/tests/: test_extractor.py
AI/SolidWorksParameterExtractor/ui/: extractor_ui.py
AI/sql_project/: README.md  main.py
AI/sql_project/documentation/: project_overview.md
AI/sql_project/reports/: employee_performance_report.sql
AI/sql_project/schema/: 01_create_tables.sql  02_insert_data.sql  03_queries.sql  04_constraints_and_validation.sql  05_transactions_and_logging.sql
test/: test_tools.py
tools/: fileManager.py
